objects/Impact_Assessments__c.object
<CustomObject>
    <description>This object is used whenever there is potential for an ER or Requirement to have an impact to another release or project</description>
    <fields>
        <fullName>Analysis__c</fullName>
        <description>Analysis once the impact assessment has completed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>IA - {0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Impact_Assessment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who is responsible for the impact assessment</description>
        <inlineHelpText>Person who is responsible for the impact assessment</inlineHelpText>
        <label>Impact Assessment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Impact_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impacted_Systems__c</fullName>
        <label>Impacted Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>EAI</fullName>
                </value>
                <value>
                    <fullName>Data Hub</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Surround</fullName>
                </value>
                <value>
                    <fullName>Pricetool</fullName>
                </value>
                <value>
                    <fullName>STARS</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potentially_Impacted_Requirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Requirement which could be potentially impacted by an ER or other project</description>
        <label>Potentially Impacted Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Impact Assessments</relationshipLabel>
        <relationshipName>Impact_Assessments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Impact Assessments</relationshipLabel>
        <relationshipName>Impact_Assessments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <description>Due date for the requested impact assessment</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Due date for the requested impact assessment</inlineHelpText>
        <label>Requested Due Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of impact assessment</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted to Assessment Owner</fullName>
                    <default>true</default>
                    <label>Submitted to Assessment Owner</label>
                </value>
                <value>
                    <fullName>Assessment In Progress</fullName>
                </value>
                <value>
                    <fullName>Assessment Provided</fullName>
                </value>
                <value>
                    <fullName>Assessment Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Impact__c</fullName>
        <label>Type of Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>No Impact</fullName>
                </value>
                <value>
                    <fullName>Code/Configuration Merge Required</fullName>
                </value>
                <value>
                    <fullName>Conflicting Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Impact Assessment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Impact Assessments Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>